# gbemu

./: .gitattributes  .gitignore  Cargo.toml  README.md  mise.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: rust.yml
gbemu_core/: Cargo.toml
gbemu_core/src/: apu.rs  context.rs  cpu.rs  lib.rs  ppu.rs
gbemu_core/src/apu/: registers.rs
gbemu_core/tests/: blargg.rs  cpu.rs  dmg_acid2.rs  mooneye.rs
gbemu_core/tests/common/: mod.rs
gbemu_iced/: Cargo.toml
gbemu_iced/src/: main.rs
gbemu_slint/: Cargo.toml
gbemu_slint/slint/: Cargo.toml  build.rs
gbemu_slint/slint/src/: lib.rs
gbemu_slint/slint/ui/: app-window.slint  memory-viewer.slint  settings.slint  tile-viewer.slint  tilemap-viewer.slint
gbemu_slint/src/: main.rs  util.rs
src/: context.rs  cpu.rs  lib.rs  main.rs  ppu.rs
test_roms/mooneye-test-suite/: .gitignore
tests/: cpu.rs
