[workspace]
resolver = "3"
members = ["gbemu_core", "gbemu_iced", "gbemu_slint", "gbemu_slint/slint"]
default-members = ["gbemu_slint"]

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.gbemu_core]
opt-level = 3

[profile.release]
debug = 1
lto = "thin"
incremental = true
codegen-units = 256
