[workspace]
resolver = "3"
members = ["gbemu_core", "gbemu_iced", "gbemu_slint", "gbemu_slint/slint"]
default-members = ["gbemu_slint"]

[workspace.dependencies]
anyhow = "1.0.102"
array-deque = "0.4.0"
base64 = "0.22.1"
better_default = "1.0.5"
bitvec = "1.0.1"
blip_buf = "0.1.6"
bytemuck = "1.25.0"
bytes = "1.12.0"
capture-it = "0.4.3"
chapa = "0.3.0"
cpal = "0.18.0"
crossbeam = "0.8.4"
dasp = "0.11.0"
dasp_sample = "0.11.0"
datatest-stable = "0.3.3"
etcetera = "0.11.0"
gbemu_core = { path = "gbemu_core" }
iced = "0.14"
iced_renderer = "0.14.0"
image = "0.25.10"
indexmap = "2.14.0"
iterm2img = "0.1.0"
itertools = "0.15.0"
log = "0.4.32"
parking_lot = "0.12.5"
paste = "1.0.15"
png = "0.18.1"
png-achunk = "0.1.0"
rfd = "0.17.2"
rgb = "0.8.53"
ringbuf = "0.5.0"
rodio = "0.22.2"
serde = "1.0.228"
serde_json = "1.0.150"
slint = "1.16.1"
slint-build = "1.16.1"
slint_generated = { path = "gbemu_slint/slint" }
spin_sleep = "1.3.3"
spire_enum = "1.0.0"
strum = "0.28.0"
tap = "1.0.1"
time = "0.3.51"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-flame = "0.2.0"
tracing-log = "0.2.0"
tracing-samply = "0.1.5"
tracing-subscriber = "0.3.23"
unarc-rs = "0.6.1"
uzi = "0.1.1"
# slint = {
#   git = "https://github.com/slint-ui/slint",
#   branch = "pre-release/1.17"
# }
# slint-build = {
#   git = "https://github.com/slint-ui/slint",
#   branch = "pre-release/1.17"
# }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.gbemu_core]
opt-level = 3

[profile.dev.package.slint_generated]
opt-level = 3

[profile.release]
debug = 1
lto = true
incremental = true
codegen-units = 256
