[package]
name = "gbemu_core"
version = "0.1.0"
edition = "2024"

[[test]]
harness = false
name = "cpu"

[[test]]
harness = false
name = "blargg"

[[test]]
harness = false
name = "mooneye"

[dependencies]
thiserror = {workspace = true}
array-deque = { workspace = true }
better_default = { workspace = true }
bitvec = { workspace = true }
blip_buf = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
chapa = { workspace = true }
crossbeam = { workspace = true }
dasp = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
png-achunk.workspace = true
rayon.workspace = true
rgb = { workspace = true }
ringbuf = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spire_enum = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tap = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
unarc-rs.workspace = true
uzi = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
datatest-stable = { workspace = true }
image = { workspace = true }
iterm2img = { workspace = true }
