[package]
name = "gbemu_iced"
version = "0.1.0"
edition = "2024"

[dependencies]
array-deque = "0.4.0"
better_default = "1.0.5"
iced = { version = "0.14", features = ["advanced", "canvas", "image", "wgpu", "lazy", "tokio"] }
iced_renderer = { version = "0.14.0", features = [
    "iced_wgpu",
    "image",
    "wgpu",
] }
itertools = "0.14.0"
parking_lot = "0.12.5"
rfd = "0.17.2"
rodio = { version = "0.22.2", features = ["64bit", "wav_output"] }
spin_sleep = "1.3.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tap = "1.0.1"
tracing = "0.1.44"
bytes = "1.11.1"
tracing-flame = "0.2.0"
gbemu_core = { path = "../gbemu_core" }
crossbeam = "0.8.4"
