[package]
name = "gbemu_slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
better_default = "1.0.5"
blip_buf = "0.1.6"
bytemuck = "1.25.0"
bytes = "1.11.1"
capture-it = "0.4.3"
cpal = { version = "0.18.0", features = ["jack", "pipewire", "pulseaudio"] }
crossbeam = "0.8.4"
dasp = {
  version = "0.11.0",
  features = [
    "interpolate",
    "interpolate-linear",
    "interpolate-sinc",
    "ring_buffer",
    "signal"
  ]
}
dasp_sample = "0.11.0"
etcetera = "0.11.0"
gbemu_core = { path = "../gbemu_core/" }
indexmap = { version = "2.14.0", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.32"
parking_lot = "0.12.5"
rfd = "0.17.2"
ringbuf = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.150"
slint = { version = "1.16.1", features = ["backend-qt"] }
slint_generated = { path = "slint" }
spin_sleep = "1.3.3"
tap = "1.0.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-flame = "0.2.0"
tracing-log = "0.2.0"
tracing-samply = "0.1.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "registry"] }
uzi = "0.1.0"

[build-dependencies]
slint-build = "1.16.1"

[features]
deadlock_detection = ["parking_lot/deadlock_detection"]
