[package]
name = "gbemu_slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
better_default = { workspace = true }
blip_buf = { workspace = true }
bytemuck = { workspace = true }
bytes = { workspace = true }
capture-it = { workspace = true }
cpal = { workspace = true, features = ["jack", "pipewire", "pulseaudio"] }
crossbeam = { workspace = true }
dasp = {
  workspace = true,
  features = [
    "interpolate",
    "interpolate-linear",
    "interpolate-sinc",
    "ring_buffer",
    "signal"
  ]
}
dasp_sample = { workspace = true }
etcetera = { workspace = true }
gbemu_core = { workspace = true }
image.workspace = true
image24 = { package = "image", version = "0.24.9" }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
png.workspace = true
png-achunk.workspace = true
rfd = { workspace = true }
ringbuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slint = { workspace = true, features = ["backend-qt"] }
slint_generated = { workspace = true }
spin_sleep = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-flame = { workspace = true }
tracing-log = { workspace = true }
tracing-samply = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
uzi = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[features]
deadlock_detection = ["parking_lot/deadlock_detection"]
